# The-AI-Engineer-Challenge

./: .gitignore  demo_rag.py  package.json  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: frontend-rule.mdc
api/: index.py
frontend/: README.md  nixpacks.toml  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatMessage.tsx  CoachingChat.tsx  SuggestedQuestions.tsx
frontend/src/lib/: api.ts
rag/: __init__.py  rag_system.py
