[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "openai",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
# Full RAG system with ChromaDB (for local development)
rag = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "uvicorn>=0.34.2",
    "jupyter>=1.1.1",
]
